# voice-to-text-windows

./: DOCUMENTATION.md  README.md  STATUS.md
flowlite/: index.html  overlay.html  package-lock.json  package.json  vite.config.ts
flowlite/src/: App.css  App.tsx  OverlayPill.tsx  overlay.tsx
flowlite/src-tauri/: Cargo.toml  tauri.conf.json
flowlite/src-tauri/capabilities/: default.json
flowlite/src-tauri/src/: audio.rs  gpu.rs  history.rs  inject.rs  lib.rs  llm.rs  main.rs  model.rs  net.rs  stt.rs  text.rs
flowlite/src/components/: Heatmap.tsx  HistoryList.tsx  HomePage.tsx  InsightsPage.tsx  SettingsModal.tsx  Sidebar.tsx  StatCard.tsx
flowlite/src/lib/: stats.ts  types.ts
