[package]
name = "flowlite"
version = "0.2.0"
description = "Local voice-to-text for Windows — hold a hotkey, speak, release"
authors = ["Harshil Patel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3"                     # write 16-bit PCM WAV for the whisper CLI
arboard = "3"
enigo = "0.3"
# Blocking HTTP for one-time model download
ureq = "2"
# Local-time day keys for usage stats (heatmap/streaks)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

