[package]
name = "flowlite"
version = "0.3.0"
description = "Local voice-to-text for Windows — hold a hotkey, speak, release"
authors = ["Harshil Patel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3"                     # write 16-bit PCM WAV for the whisper CLI
arboard = "3"
enigo = "0.3"
# Local-time day keys for usage stats (heatmap/streaks)
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Post-processing: voice commands, filler cleanup, word replacements
regex = "1"
once_cell = "1"
# Extract downloaded GPU engine / LLM runtime zips
zip = "2"

[target.'cfg(windows)'.dependencies]
# Key-state polling for the Ctrl+Win push-to-talk combo (modifier-only combos
# can't be registered through the global-shortcut plugin)
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

